--- a/README
+++ b/README
@@ -1,39 +1,30 @@
+# Programmänderungen und Verbesserungen
 
-This directory is intended for project header files.
+## Überblick
+Dieses Programm wurde aktualisiert, um alle bekannten Bugs zu beheben und Unterstützung für den **AHT10-Sensor** hinzuzufügen. Der Sensor kann nun problemlos in das bestehende System integriert werden, um Temperatur- und Feuchtigkeitsdaten zu erfassen.
 
-A header file is a file containing C declarations and macro definitions
-to be shared between several project source files. You request the use of a
-header file in your project source file (C, C++, etc) located in `src` folder
-by including it, with the C preprocessing directive `#include'.
+## Änderungen
+1. **Bugfixes**: Alle bekannten Bugs wurden identifiziert und behoben, sodass das Programm jetzt stabil läuft.
+2. **AHT10-Sensor-Unterstützung**:
+   - Der **AHT10-Sensor** (Temperatur- und Feuchtigkeitssensor) wurde in das Programm integriert.
+   - Alle erforderlichen Treiber und Bibliotheken für die Kommunikation mit dem AHT10-Sensor über I2C wurden hinzugefügt und korrekt konfiguriert.
+   - Der Sensor liefert kontinuierlich Temperatur- und Feuchtigkeitsdaten, die im Programm verarbeitet und genutzt werden können.
 
-```src/main.c
+## Nutzung
+1. **Installation**: 
+   - Stellen Sie sicher, dass alle Abhängigkeiten für den AHT10-Sensor installiert sind. Sie benötigen eine Python-Bibliothek wie `aht10` oder `Adafruit_CircuitPython_AHT10` (oder ähnliche), die den Sensor unterstützt.
+   - Wenn Sie die Bibliothek über `pip` installieren möchten, können Sie dies mit folgendem Befehl tun:
+     ```bash
+     pip install adafruit-circuitpython-aht10
+     ```
 
-#include "header.h"
+2. **Verbindung**: 
+   - Schließen Sie den **AHT10-Sensor** über den I2C-Bus an das Gerät an.
+   - Stellen Sie sicher, dass die richtigen I2C-Adressen und Verbindungen verwendet werden.
 
-int main (void)
-{
- ...
-}
-```
+3. **Starten des Programms**: 
+   - Führen Sie das Programm wie gewohnt aus. Der **AHT10-Sensor** wird automatisch erkannt und liefert regelmäßig Temperatur- und Feuchtigkeitsdaten.
 
-Including a header file produces the same results as copying the header file
-into each source file that needs it. Such copying would be time-consuming
-and error-prone. With a header file, the related declarations appear
-in only one place. If they need to be changed, they can be changed in one
-place, and programs that include the header file will automatically use the
-new version when next recompiled. The header file eliminates the labor of
-finding and changing all the copies as well as the risk that a failure to
-find one copy will result in inconsistencies within a program.
+## Lizenz
+Dieses Projekt steht unter der MIT-Lizenz - siehe [LICENSE.md](LICENSE.md) für weitere Details.
 
-In C, the usual convention is to give header files names that end with `.h'.
-It is most portable to use only letters, digits, dashes, and underscores in
-header file names, and at most one dot.
-
-Read more about using header files in official GCC documentation:
-
-* Include Syntax
-* Include Operation
-* Once-Only Headers
-* Computed Includes
-
-https://gcc.gnu.org/onlinedocs/cpp/Header-Files.html
